--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-05-14_resnet18_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-05-15_resnet18_logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -62,9 +62,9 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_11_logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel.pickle\n",
+      "           participants_file:             2023_05_11_logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel.pickle\n",
       "           augmented_files:               []\n",
       "           train_set_label_counts:        label '0': 818  -  label '1': 214\n",
       "           types_of_recording:            combined_breaths\n",
@@ -75,13 +75,13 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 4096\n",
-      "           hop_size:                      2048\n",
+      "           window_length:                 2048\n",
+      "           hop_size:                      1024\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   92.88\n",
-      "           window_length_ms:              185.76\n",
-      "           duration_seconds:              20.81\n",
+      "           hop_size_ms:                   46.44\n",
+      "           window_length_ms:              92.88\n",
+      "           duration_seconds:              10.4\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
@@ -160,47 +160,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_92msHop_184msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel\n",
       "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dataset_class</th>\n",
-       "      <th>participants_file</th>\n",
-       "      <th>augmented_files</th>\n",
-       "      <th>train_set_label_counts</th>\n",
-       "      <th>types_of_recording</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [dataset_class, participants_file, augmented_files, train_set_label_counts, types_of_recording]\n",
-       "Index: []"
+       "{'dataset_class': datasets.ResnetLogmelDataset,\n",
+       " 'participants_file': '2023_05_11_logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel.pickle',\n",
+       " 'augmented_files': [],\n",
+       " 'train_set_label_counts': \"label '0': 818  -  label '1': 214\",\n",
+       " 'types_of_recording': 'combined_breaths'}"
       ]
      },
      "execution_count": 5,
@@ -214,7 +185,8 @@
     "key=list(key)[0]\n",
     "print(key)\n",
     "print(tracker.model_and_training_parameters[\"compact\"])\n",
-    "pd.DataFrame(tracker.datasets[key])"
+    "# pd.DataFrame(tracker.datasets[key], index = [0])\n",
+    "tracker.datasets[key]"
    ]
   },
   {
@@ -226,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "559c070569ab4257ba12420652888469",
+       "model_id": "b80ce94fe5684fd1b061d3a4b6a894c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,31 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\\evaluation_and_tracking.py:259: RuntimeWarning:\n",
-      "\n",
-      "Mean of empty slice\n",
-      "\n",
-      "C:\\Users\\Michi\\Anaconda3\\envs\\python_v3-8\\lib\\site-packages\\numpy\\lib\\nanfunctions.py:1878: RuntimeWarning:\n",
-      "\n",
-      "Degrees of freedom <= 0 for slice.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   loss\n",
+      "           metric_used:                   auc_roc\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
      ]
@@ -291,7 +249,7 @@
    ],
    "source": [
     "n_samples = 10\n",
-    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"loss\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
   {
@@ -310,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7955af905ac4c7b9e56b380f9d894c5",
+       "model_id": "76e1823f5fda4f048c3ad24f350c9edc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64f3de180af949eeac6a0e6701e0348d",
+       "model_id": "6a727936c9204526ab45caac3615ab72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea0ee0520ec84f93b64d676ce92c30a9",
+       "model_id": "3d9e4cfc8f334c3f9e61237a91d3ae8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -469,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -480,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58260acdd5b545628464b516640e054d",
+       "model_id": "aad7e74d5ee643f686c96b26b3ea1fbd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -530,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -539,7 +497,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dad2a0513ca4465a843bba68eca55b63",
+       "model_id": "f608ceef157b404aad87284d1fb7860d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "e11f3b31",
    "metadata": {},
    "outputs": [],
