improved tracker visualizations

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+      "C:\\Michi\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-05-15_resnet18_logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel_baseline_hyperparams.pickle\n",
+      "Loading Tracker from: C:/Michi/acoustic_covid_detection/python/run/tracker_saves/2023-05-12_resnet18_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel_baseline_hyperparams_v1.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,9 +62,9 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel\n",
       "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
-      "           participants_file:             2023_05_11_logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel.pickle\n",
+      "           participants_file:             2023_05_05_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel.pickle\n",
       "           augmented_files:               []\n",
       "           train_set_label_counts:        label '0': 818  -  label '1': 214\n",
       "           types_of_recording:            combined_breaths\n",
@@ -75,13 +75,13 @@
       "           n_features:                    224\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 2048\n",
-      "           hop_size:                      1024\n",
+      "           window_length:                 1024\n",
+      "           hop_size:                      256\n",
       "           fmin:                          0\n",
       "           fmax:                          11025\n",
-      "           hop_size_ms:                   46.44\n",
-      "           window_length_ms:              92.88\n",
-      "           duration_seconds:              10.4\n",
+      "           hop_size_ms:                   11.61\n",
+      "           window_length_ms:              46.44\n",
+      "           duration_seconds:              2.6\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
@@ -90,9 +90,9 @@
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                48\n",
+      "           parameter runs:                24\n",
       "           folds per run:                 1\n",
-      "           epochs:                        200\n"
+      "           epochs:                        400\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel\n",
+      "logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel\n",
       "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
      ]
     },
@@ -168,13 +168,13 @@
      "data": {
       "text/plain": [
        "{'dataset_class': datasets.ResnetLogmelDataset,\n",
-       " 'participants_file': '2023_05_11_logmel_combined_breaths_NEW_46msHop_92msFFT_fmax11000_224logmel.pickle',\n",
+       " 'participants_file': '2023_05_05_logmel_combined_breaths_NEW_11msHop_23msFFT_fmax11000_224logmel.pickle',\n",
        " 'augmented_files': [],\n",
        " 'train_set_label_counts': \"label '0': 818  -  label '1': 214\",\n",
        " 'types_of_recording': 'combined_breaths'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b80ce94fe5684fd1b061d3a4b6a894c1",
+       "model_id": "c9387eea21914433bf9fc412d47fdb25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
      "text": [
       "\n",
       "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   auc_roc\n",
+      "           metric_used:                   loss\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
      ]
@@ -249,7 +249,7 @@
    ],
    "source": [
     "n_samples = 10\n",
-    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"loss\")"
    ]
   },
   {
@@ -268,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76e1823f5fda4f048c3ad24f350c9edc",
+       "model_id": "e65eafc5092942bd8d316ac828ccb4b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,14 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "c528fc80-4c73-498f-beeb-84c0484f7888",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a727936c9204526ab45caac3615ab72",
+       "model_id": "1d06ef503a6449eb89059066d36094c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,9 +345,12 @@
    ],
    "source": [
     "# hyperparameters = (list(tracker.crossval_runs[0].parameters.keys()))\n",
+    "options = tracker.get_only_varied_hyperparam_columns()\n",
+    "dropdown_colorby = widgets.Dropdown(options=[None, *options], value=options[0])\n",
+    "\n",
     "_ = widgets.interact(tracker.boxplot_run_statistics, metric=tracker.metrics_used,\n",
     "                     show_n_best_runs=widgets.IntSlider(value=tracker.n_hyperparameter_runs, min=1, max=tracker.n_hyperparameter_runs),\n",
-    "                     color_by_hyperparameter=[None, *tracker.hyperparameters],\n",
+    "                     color_by_hyperparameter=dropdown_colorby,\n",
     "                     sort_by_current_metric=True)"
    ]
   },
@@ -354,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "92288b41-c290-41e2-8261-39883daf79e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d9e4cfc8f334c3f9e61237a91d3ae8e",
+       "model_id": "0c88c84ac2db4dc08e66577cd6e8cb67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "149a88c5-0f4d-45fc-83bf-e870f963a8af",
    "metadata": {},
    "outputs": [],
@@ -427,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [],
@@ -438,14 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aad7e74d5ee643f686c96b26b3ea1fbd",
+       "model_id": "236b5566bf2c47c48bfd15650699509e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,6 +469,8 @@
     }
    ],
    "source": [
+    "options = tracker.get_only_varied_hyperparam_columns()\n",
+    "dropdown_colorby = widgets.Dropdown(options=[None, *options], value=options[0])\n",
     "_ = widgets.interact(tracker.show_all_runs, \n",
     "                     mode=[\"eval\", \"train\"], \n",
     "                     metric=tracker.metrics_used, \n",
@@ -465,12 +478,12 @@
     "                     show_separate_folds=True, \n",
     "                     show_std_area_plot=False,\n",
     "                     show_n_best_runs=widgets.IntSlider(value=10, min=1, max=tracker.n_hyperparameter_runs),\n",
-    "                     color_by_hyperparameter=[None, *tracker.hyperparameters])"
+    "                     color_by_hyperparameter=dropdown_colorby)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -488,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -497,12 +510,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f608ceef157b404aad87284d1fb7860d",
+       "model_id": "0ba78200b78c4d6bb1c56ffa5c9fa67f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.0001', 'wd': '0.0001',…"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '8e-05', 'wd': '0.0001', …"
       ]
      },
      "metadata": {},
@@ -529,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "e11f3b31",
    "metadata": {},
    "outputs": [],
@@ -610,18 +623,18 @@
     {
      "data": {
       "text/plain": [
-       "[\"{'time_steps': '100', 'resnet_dropout': 'True', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '100', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '400', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '200', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '400', 'resnet_dropout': 'False', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '400', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '200', 'resnet_dropout': 'True', 'min_quality': '2'}\",\n",
+       "[\"{'time_steps': '400', 'resnet_dropout': 'False', 'min_quality': '2'}\",\n",
        " \"{'time_steps': '100', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
-       " \"{'time_steps': '200', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
        " \"{'time_steps': '100', 'resnet_dropout': 'False', 'min_quality': '2'}\",\n",
        " \"{'time_steps': '200', 'resnet_dropout': 'False', 'min_quality': '2'}\",\n",
-       " \"{'time_steps': '400', 'resnet_dropout': 'True', 'min_quality': '2'}\"]"
+       " \"{'time_steps': '400', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
+       " \"{'time_steps': '400', 'resnet_dropout': 'True', 'min_quality': '2'}\",\n",
+       " \"{'time_steps': '400', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
+       " \"{'time_steps': '100', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
+       " \"{'time_steps': '200', 'resnet_dropout': 'False', 'min_quality': '1'}\",\n",
+       " \"{'time_steps': '200', 'resnet_dropout': 'True', 'min_quality': '2'}\",\n",
+       " \"{'time_steps': '200', 'resnet_dropout': 'True', 'min_quality': '1'}\",\n",
+       " \"{'time_steps': '100', 'resnet_dropout': 'True', 'min_quality': '2'}\"]"
       ]
      },
      "execution_count": 19,
@@ -636,10 +649,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c8440dc9-ecea-4b5d-84a7-50265e2a4565",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "\"{'time_steps': '100', 'resnet_dropout': 'False'}\" is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m unique_list\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime_steps\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m100\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresnet_dropout\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFalse\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: \"{'time_steps': '100', 'resnet_dropout': 'False'}\" is not in list"
+     ]
+    }
+   ],
    "source": [
     "unique_list.index(\"{'time_steps': '100', 'resnet_dropout': 'False'}\")"
    ]
@@ -647,9 +672,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (python_v3-8)",
+   "display_name": "ai38",
    "language": "python",
-   "name": "python_v3-8"
+   "name": "ai38"
   },
   "language_info": {
    "codemirror_mode": {
